--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "gulp": "^3.8.10",
+    "gulp-gh-pages": "0.5.4",
     "gulp-jasmine": "^2.0.1",
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.9.0",
